2010-10-05  Nico Weber  <thakis@chromium.org>

Reviewed by Andreas Kling.

        Fix clang build
        https://bugs.webkit.org/show_bug.cgi?id=47198

        * page/Chrome.h:
        Declare ViewportArguments as struct, not as class.

Canonical link: https://commits.webkit.org/59749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69142 268f45cc-cd09-0410-ab3c-d52691b4dbfc